force-app/main/default/objects/Animal_Exam_Sheet__c/Animal_Exam_Sheet__c.object-meta.xml
<CustomObject>
    <label>Animal Exam Sheet</label>
    <nameField>
        <displayFormat>EX-{0}</displayFormat>
        <label>Exam Sheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Exam Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>