force-app/main/default/objects/Animal_Exam_Sheet__c/fields/AAH_ID__c.field-meta.xml
<CustomField>
    <fullName>AAH_ID__c</fullName>
    <formula>Animal__r.AAH_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAH ID #</label>
    <type>Text</type>
</CustomField>