force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Abdomen__c.field-meta.xml
<CustomField>
    <fullName>Abdomen__c</fullName>
    <label>Abdomen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft, no obvious organomegaly or masses palpated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>