force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Abdomen_Gastrointestinal_Urogential__c.field-meta.xml
<CustomField>
    <fullName>Abdomen_Gastrointestinal_Urogential__c</fullName>
    <label>Abdomen/Gastrointestinal/Urogential OLD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloaca clean</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>