force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Abdominal_Cavity_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Abdominal_Cavity_Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abdominal Cavity Finalized</label>
    <type>Checkbox</type>
</CustomField>