force-app/main/default/objects/Animal_Exam_Sheet__c/fields/ADB_GI__c.field-meta.xml
<CustomField>
    <fullName>ADB_GI__c</fullName>
    <label>Abdomen/Gastrointestinal Notes</label>
    <type>TextArea</type>
</CustomField>