force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Addendum__c.field-meta.xml
<CustomField>
    <fullName>Addendum__c</fullName>
    <label>Addendum</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>