force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Addendum_Date__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Date__c</fullName>
    <label>Addendum Date</label>
    <type>Date</type>
</CustomField>