force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Addendum_Veterinarian_Name__c.field-meta.xml
<CustomField>
    <fullName>Addendum_Veterinarian_Name__c</fullName>
    <label>Addendum Veterinarian Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>