force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Address_Where_Animal_Was_Taken__c.field-meta.xml
<CustomField>
    <fullName>Address_Where_Animal_Was_Taken__c</fullName>
    <label>Address Where Animal Was Taken</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>