force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Administered_1__c.field-meta.xml
<CustomField>
    <fullName>Administered_1__c</fullName>
    <label>Administered-1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>SQ</fullName>
            </value>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>Topical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>