force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Administered_By__c.field-meta.xml
<CustomField>
    <fullName>Administered_By__c</fullName>
    <description>Enter the first and last name of the person that administered the euthanasia solution.</description>
    <inlineHelpText>Enter the first and last name of the person that administered the euthanasia solution.</inlineHelpText>
    <label>Administered By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>