force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Adrenals__c.field-meta.xml
<CustomField>
    <fullName>Adrenals__c</fullName>
    <defaultValue>&quot;Bilateral adrenal glands are asymmetrical, both are bilobed and flattened in shape. There is clear distinction between the cortex and medulla, with a ratio of 1:1 respectively. Appears subjectively appropriate in size with no overt masses or lesions.&quot;</defaultValue>
    <label>Adrenals</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>