force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Age_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Age_Estimate__c</fullName>
    <formula>TEXT( Animal__r.Age__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Estimate</label>
    <type>Text</type>
</CustomField>