force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Age_Estimate_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Age_Estimate_Picklist__c</fullName>
    <label>Age Estimate at Intake</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Species_PL__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Age_Estimate_at_Intake</valueSetName>
    </valueSet>
</CustomField>