force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Age_Notes__c.field-meta.xml
<CustomField>
    <fullName>Age_Notes__c</fullName>
    <label>Age Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>