force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Aggressive_Details__c.field-meta.xml
<CustomField>
    <fullName>Aggressive_Details__c</fullName>
    <label>Aggressive Details</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Friendly/Tolerant/Easy-Going</fullName>
            </value>
            <value>
                <fullName>Evasive/Fearful</fullName>
            </value>
            <value>
                <fullName>Highly Aroused/Rowdy/Excited</fullName>
            </value>
            <value>
                <fullName>Neutral/Aloof/Stocic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>