force-app/main/default/objects/Animal_Exam_Sheet__c/fields/AgView_Certificate__c.field-meta.xml
<CustomField>
    <fullName>AgView_Certificate__c</fullName>
    <formula>HYPERLINK(&quot;https://agview.com/login&quot;, &quot;AgView Certificate&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AgView Certificate</label>
    <type>Text</type>
</CustomField>