force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Amount_1__c</fullName>
    <label>Amount-1 in ml</label>
    <length>80</length>
    <type>Text</type>
</CustomField>