force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Amount_2__c</fullName>
    <label>Amount-2 in ml</label>
    <length>80</length>
    <type>Text</type>
</CustomField>