force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Amount_3__c.field-meta.xml
<CustomField>
    <fullName>Amount_3__c</fullName>
    <label>Amount-3 in ml</label>
    <length>80</length>
    <type>Text</type>
</CustomField>