force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Amount_dosage1__c.field-meta.xml
<CustomField>
    <fullName>Amount_dosage1__c</fullName>
    <label>Amount (Dosage 1 in ml)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>