force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Amount_Dosage_2__c.field-meta.xml
<CustomField>
    <fullName>Amount_Dosage_2__c</fullName>
    <label>Amount (Dosage 2 in ml)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>