force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Amount_Dosage_in_ml__c.field-meta.xml
<CustomField>
    <fullName>Amount_Dosage_in_ml__c</fullName>
    <label>Amount (Dosage in ml)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>