force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Animal Exam Sheets</relationshipLabel>
    <relationshipName>Animal_Exam_Sheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>