force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Animal_Exam_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Animal_Exam_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Exam Sheet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Animal_Exam_Sheet__c.Animal__c</field>
            <operation>equals</operation>
            <valueField>$Source.Animal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Animal_Exam_Sheet__c</referenceTo>
    <relationshipLabel>Animal Exam Sheets</relationshipLabel>
    <relationshipName>Animal_Exam_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>