force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Animal_Living_With_Animals_Describe__c.field-meta.xml
<CustomField>
    <fullName>Animal_Living_With_Animals_Describe__c</fullName>
    <label>Animal Living With Animals? (Describe)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>