force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Animal_Picture__c.field-meta.xml
<CustomField>
    <fullName>Animal_Picture__c</fullName>
    <formula>Animal__r.Thumbnail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal Picture</label>
    <type>Text</type>
</CustomField>