force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Annual_Exam_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Annual_Exam_Protocol__c</fullName>
    <formula>HYPERLINK(&quot;https://aspca.app.box.com/file/367541205456&quot;, &quot;Annual Exam Protocol&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Exam Protocol</label>
    <type>Text</type>
</CustomField>