force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Assessment2__c.field-meta.xml
<CustomField>
    <fullName>Assessment2__c</fullName>
    <label>Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apparently healthy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>