force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Assistant__c.field-meta.xml
<CustomField>
    <fullName>Assistant__c</fullName>
    <description>This person is assisting with medical exams, but is not a veterinarian technician.</description>
    <inlineHelpText>This field was created as an alternate choice instead of tech.  This person is assisting with medical exams, but is not a veterinarian technician.</inlineHelpText>
    <label>Assistant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scott Sherlock</fullName>
            </value>
            <value>
                <fullName>Maxi Lambert</fullName>
            </value>
            <value>
                <fullName>Josiah Mathews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>