force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Attendees_Assistants__c.field-meta.xml
<CustomField>
    <fullName>Attendees_Assistants__c</fullName>
    <label>Attendees/Assistants</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Necropsy_Attendees</valueSetName>
    </valueSet>
</CustomField>