force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Authorized_by__c.field-meta.xml
<CustomField>
    <fullName>Authorized_by__c</fullName>
    <label>Authorized By</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dr. Rachel Touroo</fullName>
            </value>
            <value>
                <fullName>Dr. Rhonda Windham</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>