force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Avian_BCS__c.field-meta.xml
<CustomField>
    <fullName>Avian_BCS__c</fullName>
    <description>BCS field just for Birds</description>
    <inlineHelpText>BCS field just for Birds</inlineHelpText>
    <label>Avian BCS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>