force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Avian_feathers__c.field-meta.xml
<CustomField>
    <fullName>Avian_feathers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox question &quot;Feathers shaved or plucked around legs and dorsal lumbar region&quot;</description>
    <inlineHelpText>Checkbox question &quot;Feathers shaved or plucked around legs and dorsal lumbar region&quot;</inlineHelpText>
    <label>Feathers shaved or plucked?</label>
    <type>Checkbox</type>
</CustomField>