force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Avian_Spurs__c.field-meta.xml
<CustomField>
    <fullName>Avian_Spurs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for question &quot;Spurs shaved or cut down to around 1/2 inch&quot;</description>
    <inlineHelpText>Checkbox for question &quot;Spurs shaved or cut down to around 1/2 inch&quot;</inlineHelpText>
    <label>Spurs shaved or cut down? (Historical)</label>
    <type>Checkbox</type>
</CustomField>