force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Avian_Wattles__c.field-meta.xml
<CustomField>
    <fullName>Avian_Wattles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for question &quot;Wattles, ear lobes, and comb trimmed&quot;</description>
    <inlineHelpText>Checkbox for question &quot;Wattles, ear lobes, and comb trimmed&quot;</inlineHelpText>
    <label>Wattles, ear lobes, comb trim? INACTIVE</label>
    <type>Checkbox</type>
</CustomField>