force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Avian_Wounds__c.field-meta.xml
<CustomField>
    <fullName>Avian_Wounds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to &quot;Wounds present&quot;</description>
    <inlineHelpText>Checkbox to &quot;Wounds present&quot;</inlineHelpText>
    <label>Wounds present?</label>
    <type>Checkbox</type>
</CustomField>