force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Babesia__c.field-meta.xml
<CustomField>
    <fullName>Babesia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Babesia (INACTIVE)</label>
    <type>Checkbox</type>
</CustomField>