force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Babesia_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Babesia_Performed_Other__c</fullName>
    <label>Babesia Performed - Other (INACTIVE)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>