force-app/main/default/objects/Animal_Exam_Sheet__c/fields/BCS_Other__c.field-meta.xml
<CustomField>
    <fullName>BCS_Other__c</fullName>
    <label>BCS - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>