force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Behavior__c.field-meta.xml
<CustomField>
    <fullName>Behavior__c</fullName>
    <formula>Text(Animal__r.Behavior_Class__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Behavior</label>
    <type>Text</type>
</CustomField>