force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Blank__c.field-meta.xml
<CustomField>
    <fullName>Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blank (INACTIVE)</label>
    <type>Checkbox</type>
</CustomField>