force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Blank_Diagnostic__c.field-meta.xml
<CustomField>
    <fullName>Blank_Diagnostic__c</fullName>
    <label>Blank Diagnostic (INACTIVE)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>