force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Blank_Results__c.field-meta.xml
<CustomField>
    <fullName>Blank_Results__c</fullName>
    <label>Blank Results (INACTIVE)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>