force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Blunt_Force_Trauma__c.field-meta.xml
<CustomField>
    <fullName>Blunt_Force_Trauma__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blunt Force Trauma</label>
    <type>Checkbox</type>
</CustomField>