force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Body_Refrigerated_or_Frozen__c.field-meta.xml
<CustomField>
    <fullName>Body_Refrigerated_or_Frozen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Refrigerated or Frozen</label>
    <type>Checkbox</type>
</CustomField>