force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Bordetella__c.field-meta.xml
<CustomField>
    <fullName>Bordetella__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IN Bordetella (INACTIVE)</label>
    <type>Checkbox</type>
</CustomField>