force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Brain__c.field-meta.xml
<CustomField>
    <fullName>Brain__c</fullName>
    <label>Brain</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>