force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <formula>Animal__r.Breeds_Combined__c</formula>
    <label>Breed</label>
    <type>Text</type>
</CustomField>