force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Breed_Text__c.field-meta.xml
<CustomField>
    <fullName>Breed_Text__c</fullName>
    <label>Breed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>