force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Cardiac_Respiratory2__c.field-meta.xml
<CustomField>
    <fullName>Cardiac_Respiratory2__c</fullName>
    <label>Cardiac/Respiratory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal rate and rhythm, lungs clear, no nasal discharge</fullName>
            </value>
            <value>
                <fullName>Lung sounds clear, eupneic; heart rate and rhythm normal; no murmur auscultated; strong, synchronous and symmetric pulses</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>