force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Cardio_resp__c.field-meta.xml
<CustomField>
    <fullName>Cardio_resp__c</fullName>
    <label>Cardiac/Respiratory Notes</label>
    <type>TextArea</type>
</CustomField>