force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <formula>Animal__r.Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case #</label>
    <type>Text</type>
</CustomField>