force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Case_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Case_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Animal Exam Sheets</relationshipLabel>
    <relationshipName>Animal_Exam_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>