force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Cautions__c.field-meta.xml
<CustomField>
    <fullName>Cautions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cautions</label>
    <type>Checkbox</type>
</CustomField>