force-app/main/default/objects/Animal_Exam_Sheet__c/fields/CBC_Performed_Other2__c.field-meta.xml
<CustomField>
    <fullName>CBC_Performed_Other2__c</fullName>
    <label>CBC Performed - Other (INACTIVE)</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>