force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Chem_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Chem_Performed_Other__c</fullName>
    <label>Chem Performed - Other (INACTIVE)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>