force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Chronic_Medications__c.field-meta.xml
<CustomField>
    <fullName>Chronic_Medications__c</fullName>
    <label>Chronic Medications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>