force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Clear_Default_Findings__c.field-meta.xml
<CustomField>
    <fullName>Clear_Default_Findings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear Default Findings</label>
    <type>Checkbox</type>
</CustomField>