force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Coggins__c.field-meta.xml
<CustomField>
    <fullName>Coggins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coggins</label>
    <type>Checkbox</type>
</CustomField>