force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <formula>Text(Animal__r.Color__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>