force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Comb__c.field-meta.xml
<CustomField>
    <fullName>Comb__c</fullName>
    <label>Comb</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intact</fullName>
            </value>
            <value>
                <fullName>Trimmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>