force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Complaint_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Number__c</fullName>
    <label>Complaint Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>