force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Controlled_Drugs__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Drugs__c</fullName>
    <label>Controlled Drugs</label>
    <type>TextArea</type>
</CustomField>