force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Culture_Sensitivity_Performed__c.field-meta.xml
<CustomField>
    <fullName>Culture_Sensitivity_Performed__c</fullName>
    <label>Culture &amp; Sensitivity Perf (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Idexx</fullName>
            </value>
            <value>
                <fullName>Antech</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>