force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Culture_Sensitivity_Performed_Other__c.field-meta.xml
<CustomField>
    <fullName>Culture_Sensitivity_Performed_Other__c</fullName>
    <label>Culture &amp; Sensitivity - Other (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>See attached results</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>