force-app/main/default/objects/Animal_Exam_Sheet__c/fields/Current_Animal_Weight_in_kgs__c.field-meta.xml
<CustomField>
    <fullName>Current_Animal_Weight_in_kgs__c</fullName>
    <formula>Animal__r.Current_Weight_in_kgs_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Animal Weight (in kgs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>